edc-ionos-s3-4.0.0/deployment/k8s/vault.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hashicorp-vault
  labels:
    app: hashicorp-vault
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hashicorp-vault
  template:
    metadata:
      labels:
        app: hashicorp-vault
    spec:
      containers:
      - name: hashicorp-vault
        image: hashicorp/vault:1.17.2
        ports:
        - containerPort: 8200
        securityContext:
          privileged: true
        resources:
          requests:
            memory: "1Gi"
            cpu: "500m"  
          limits:
            memory: "2Gi"
            cpu: "1"     
---
apiVersion: v1
kind: Service
metadata:
  name: hashicorp-vault
  labels:
    app: hashicorp-vault
spec:
  selector:
    app: hashicorp-vault
  ports:
  - name: hashicorp-vault
    port: 8200
    targetPort: 8200
  type: ClusterIP
