edc-ionos-s3-4.0.0/deployment/k8s/provider.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: provider
  labels:
    app: provider
spec:
  replicas: 1
  selector:
    matchLabels:
      app: provider
  template:
    metadata:
      labels:
        app: provider
    spec:
      containers:
      - name: provider
        image: quay.io/bcapper30/s3-provider-env
        ports:
        - containerPort: 8181
          name: api
        - containerPort: 8182
          name: management
        - containerPort: 8282
          name: protocol
        - containerPort: 8283
          name: control
        - containerPort: 8383
          name: public
---
apiVersion: v1
kind: Service
metadata:
  name: provider
  labels:
    app: provider
spec:
  selector:
    app: provider
  ports:
  - name: api
    port: 8181
    targetPort: 8181
  - name: management
    port: 8182
    targetPort: 8182
  - name: protocol
    port: 8282
    targetPort: 8282
  - name: control
    port: 8283
    targetPort: 8283
  - name: public
    port: 8383
    targetPort: 8383
  type: ClusterIP
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: consumer-management
  labels:
    app: provider
spec:
  to:
    kind: Service
    name: provider
  port:
    targetPort: management
  tls:
    termination: edge
